<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Welcome To"
        android:textColor="@color/main_icons_area_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:text="@string/app_name"
        android:textColor="@color/header_text_color"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:background="@drawable/main_icons_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/lengthBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/length" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/areaBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/area" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/volumeBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/volume" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/volume"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/weighttBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/weight" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tempBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/temperature" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/speedBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/speed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/currencyBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/currency" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textAlignment="center"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/powerBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/power" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/power"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pressureBtn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="@drawable/main_blue_redius_20_padding_10"
                        android:elevation="5dp"
                        android:scrollbarSize="20dp"
                        app:srcCompat="@drawable/pressure" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textAlignment="center"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:textColor="@color/def" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/main_blue_redius_20_padding_10"
                android:elevation="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="130dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/programmer_icon" />

                    <ImageView
                        android:id="@+id/main_info_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:elevation="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/info_icon" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/developed_by"
                    android:textColor="@color/main_icons_area_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/developer"
                    android:textColor="@color/header_text_color"
                    android:textSize="26sp" />
            </LinearLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="168dp"
                android:layout_marginBottom="45dp"
                android:text="@string/version"
                android:textColor="@color/def"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>